--- a/_posts/2021-04-27-0426-0502.md
+++ b/_posts/2021-04-27-0426-0502.md
@@ -220,7 +220,7 @@ public boolean preHandle(HttpServletRequest request, HttpServletResponse respons
           :class="{ on: startPageIndex + index - 1 == currentPageNo }"
           @click="changePage(index)"
         >
-          {{ startPageIndex + index - 1 }}
+          startPageIndex + index - 1 
         </a>
       </li>
       <li>
@@ -580,3 +580,69 @@ export default {
 
 * 동적 라우팅을 통해 받은 파라미터를 api를 호출할 때 사용할 변수로 사용했다.
 * 결과 값으로 받아온 boardInfo의 속성들을 화면을 나타내는 데 적절하게 사용해서 구현하였다.
+
+## 0502
+# 좋아요 기능
+각 게시물에 한 회원당 한 번의 좋아요를 클릭할 수 있다.  
+좋아요는 처음에 빈 하트로 존재하고, 클릭시 하트가 채워지며 좋아요 수가 증가한다.  
+이미 좋아한 글에 다시 들어올 때는 좋아요 하트가 채워진 채로 보여지게 된다.  
+
+```vue
+<!-- template 영역 - 좋아요 부분만 제외하고는 생략 -->
+<template>
+  <div class="like">
+    <i
+      class="far fa-heart heart"
+      v-if="boardInfo.likeYn == 'N'"
+      @click="clickLikeMethod"
+    >
+    </i>
+    <i
+      class="fas fa-heart heart"
+      v-if="boardInfo.likeYn == 'Y'"
+      @click="clickLikeMethod"
+    >
+    </i>
+    <span class="heart_cnt">좋아요 {{ boardInfo.likeCnt }}</span>
+  </div>
+</template>
+
+<script>
+import { mapActions } from "vuex";
+
+export default {
+  data() {
+    return {
+      boardNo: this.$route.params.boardNo,
+      boardInfo: {}
+    };
+  },
+  methods: {
+    ...mapActions(["getBoardDetail", "clickLike"]),
+    async getBoardDetailMethod() {
+      try {
+        this.boardInfo = await this.getBoardDetail(this.boardNo);
+        console.log(this.boardInfo);
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    async clickLikeMethod() {
+      try {
+        const boardNo = {
+          boardNo: this.boardNo
+        };
+        await this.clickLike(boardNo);
+        await this.getBoardDetailMethod();
+      } catch (error) {
+        console.log(error.response);
+      }
+    }
+  },
+  created() {
+    this.getBoardDetailMethod();
+  }
+};
+</script>
+```
+* 좋아요 숫자를 업데이트 한 후, 업데이트 결과를 화면에 다시 그려주기 위해서 게시글 세부 정보 api를 재호출한다.
