--- a/_posts/2021-05-04-0503-0509.md
+++ b/_posts/2021-05-04-0503-0509.md
@@ -103,3 +103,213 @@ export default {
 
 > 댓글 목록, 삭제기능과 글 수정 삭제 기능만 구현하면 모든 메인 기능이 완성된다.  
 > 빠르게 마무리 하고, 세부 오류 사항들을 잡은 뒤 다음 프로젝트로 넘어가야겠다.
+
+## 0504
+# 댓글 목록, 삭제 기능
+해당 게시글에 대한 댓글의 목록을 보여주고, 댓글을 입력하거나 삭제하였을 때 알맞게 상태가 변경되도록 기능을 구현하였다.  
+이번에는 좀 더 vuex를 논리적으로 잘 사용하기 위해 신경을 써가며 구현하였다.
+
+```vue
+<!-- PostComment.vue -->
+<template>
+  <div class="content_comment">
+    <div class="comment_header">
+      <i class="far fa-comment-dots comment_img"></i>
+      <span class="comment_title">댓글</span>
+      <span class="comment_cnt">{{ boardInfo.commentCnt }}</span>
+    </div>
+
+    <div
+      class="comment_list"
+      v-for="(list, index) in commentList"
+      v-bind:key="index"
+    >
+      <table class="content_mainTable02">
+        <colgroup>
+          <col style="width: 2%;" />
+          <col />
+          <col style="width: 12%;" />
+        </colgroup>
+        <tr>
+          <td></td>
+          <td>
+            <div class="comment_list_name">
+              {{ list.memberName }}
+            </div>
+            <div class="comment_list_content">
+              {{ list.content }}
+            </div>
+            <div class="comment_list_date">
+              {{ list.regDate }}
+            </div>
+          </td>
+          <td>
+            <button
+              class="btn_basic"
+              @click="deleteCommentMethod(list.commentNo)"
+            >
+              삭제
+            </button>
+          </td>
+        </tr>
+      </table>
+
+      <hr v-if="index != commentList.length - 1" />
+    </div>
+
+    <div class="comment_input">
+      <div class="comment_input_name">{{ memberName }}</div>
+      <table class="content_mainTable02">
+        <colgroup>
+          <col />
+          <col style="width: 10%;" />
+        </colgroup>
+        <tr>
+          <td>
+            <textarea
+              placeholder="댓글을 남겨보세요"
+              class="comment_input_text"
+              v-model="content"
+            />
+          </td>
+          <td>
+            <button class="btn_basic" @click="addCommentMethod">등록</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</template>
+
+<script>
+import { mapActions, mapState } from "vuex";
+
+export default {
+  data() {
+    return {
+      boardNo: this.$route.params.boardNo,
+      content: ""
+    };
+  },
+  computed: {
+    ...mapState({
+      boardInfo: state => state.board.boardInfo,
+      commentList: state => state.board.commentList,
+      memberName: state => state.member.memberName
+    })
+  },
+  methods: {
+    ...mapActions(["addComment", "getCommentList", "deleteComment"]),
+    async addCommentMethod() {
+      try {
+        const param = {
+          boardNo: this.boardNo,
+          content: this.content
+        };
+
+        await this.addComment(param);
+        this.afterAddComment();
+      } catch (error) {
+        console.log(error.response);
+        alert(error.response.data.message);
+      }
+    },
+    async getCommentListMethod() {
+      try {
+        const param = {
+          boardNo: this.boardNo,
+          recordsPerPage: 100
+        };
+
+        await this.getCommentList(param);
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    async deleteCommentMethod(commentNo) {
+      try {
+        if (!confirm("댓글을 삭제하시겠습니까?")) {
+          return;
+        }
+
+        const param = {
+          commentNo: commentNo,
+          boardNo: this.boardNo
+        };
+
+        await this.deleteComment(param);
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    afterAddComment() {
+      this.content = "";
+    }
+  }
+};
+</script>
+
+<style scoped src="../../assets/css/post/comment.css"></style>
+```
+
+```javascript
+/* eslint-disable no-unused-vars */
+import boardService from "@/api/board";
+
+export const board = {
+  state: {
+    boardInfo: {},
+    commentList: []
+  },
+  actions: {
+    async getBoardList({ commit }, criteria) {
+      const result = await boardService.getBoardList(criteria);
+      return result.data.data;
+    },
+    async getBoardSearchList({ commit }, criteria) {
+      const result = await boardService.getBoardSearchList(criteria);
+      console.log(result.data.data);
+      return result.data.data;
+    },
+    async getBoardDetail({ commit, dispatch }, boardNo) {
+      const result = await boardService.getBoardDetail(boardNo);
+      commit("setBoardInfo", result.data.data.info);
+      dispatch("getCommentList", {
+        boardNo: boardNo,
+        recordsPerPage: 100
+      });
+    },
+    async addPost({ commit }, post) {
+      const result = await boardService.addPost(post);
+      return result.data;
+    },
+    async clickLike({ commit, dispatch }, boardNo) {
+      await boardService.clickLike(boardNo);
+      dispatch("getBoardDetail", boardNo.boardNo);
+    },
+    async addComment({ commit, dispatch }, data) {
+      await boardService.addComment(data);
+      dispatch("getBoardDetail", data.boardNo);
+    },
+    async deleteComment({ commit, dispatch }, data) {
+      await boardService.deleteComment(data.commentNo);
+      dispatch("getBoardDetail", data.boardNo);
+    },
+    async getCommentList({ commit }, data) {
+      const result = await boardService.getCommentList(data);
+      commit("setCommentList", result.data.data.list);
+    }
+  },
+  mutations: {
+    setBoardInfo(state, info) {
+      state.boardInfo = info;
+    },
+    setCommentList(state, list) {
+      state.commentList = list;
+    }
+  }
+};
+```
+* board의 state는 게시글의 세부 정보들을 포함하고 있는 boardInfo와 게시글의 댓글 목록인 commentList가 있다.
+* 댓글을 입력하거나 삭제했을 경우, 화면에 새로 생성되거나 삭제된 댓글 목록을 보여주기 위해 다시 getCommentList를 호출해야 했다.
+* 그리고 boardInfo의 속성인 댓글의 개수도 업데이트 해서 화면에 보여줘야 했는데, getCommentList를 호출하고 나서 getBoardDetail을 호출하기 보다는 애초에 게시글을 처음에 불러올 때 getBoardDetail이 호출되고, Comment는 그 안의 컴포넌트로 구성되어 있기 때문에 getBoardDetail에서 getCommentList를 호출하고 화면 업데이트가 필요하다면 getBoardDetail만 호출하는 것이 논리적으로 적합하다고 생각하여 그렇게 구성하였다.
