--- a/_posts/2021-05-04-0503-0509.md
+++ b/_posts/2021-05-04-0503-0509.md
@@ -313,3 +313,100 @@ export const board = {
 * board의 state는 게시글의 세부 정보들을 포함하고 있는 boardInfo와 게시글의 댓글 목록인 commentList가 있다.
 * 댓글을 입력하거나 삭제했을 경우, 화면에 새로 생성되거나 삭제된 댓글 목록을 보여주기 위해 다시 getCommentList를 호출해야 했다.
 * 그리고 boardInfo의 속성인 댓글의 개수도 업데이트 해서 화면에 보여줘야 했는데, getCommentList를 호출하고 나서 getBoardDetail을 호출하기 보다는 애초에 게시글을 처음에 불러올 때 getBoardDetail이 호출되고, Comment는 그 안의 컴포넌트로 구성되어 있기 때문에 getBoardDetail에서 getCommentList를 호출하고 화면 업데이트가 필요하다면 getBoardDetail만 호출하는 것이 논리적으로 적합하다고 생각하여 그렇게 구성하였다.
+
+## 0505
+# 게시글 삭제 기능
+
+```vue
+<!-- PostDetailHeader.vue -->
+<template>
+  <div class="title_mainTop">
+    <div class="title_leftNav">
+      <button
+        class="btn_basic"
+        v-if="memberNo === boardInfo.memberNo"
+        @click="routeEditPage"
+      >
+        수정
+      </button>
+      <button
+        class="btn_basic"
+        v-if="memberNo === boardInfo.memberNo"
+        @click="deletePostMethod"
+      >
+        삭제
+      </button>
+    </div>
+    <div class="title_center">
+      <span @click="routeMainPage">Main</span>
+    </div>
+    <div class="title_rightNav">
+      <ul>
+        <li><img class="rightNav_profile" /></li>
+        <li>
+          <span title="사용자정보">{{ this.memberName }}님</span>
+        </li>
+        <li><button @click="logoutMethod">로그아웃</button></li>
+      </ul>
+    </div>
+  </div>
+</template>
+
+<script>
+import { mapState, mapMutations, mapActions } from "vuex";
+
+export default {
+  data() {
+    return {
+      boardNo: this.$route.params.boardNo
+    };
+  },
+  computed: {
+    ...mapState({
+      memberName: state => state.member.memberName,
+      memberNo: state => state.member.memberNo,
+      boardInfo: state => state.board.boardInfo
+    })
+  },
+  methods: {
+    ...mapActions(["editPost", "deletePost"]),
+    ...mapMutations(["logout"]),
+    async editPostMethod() {
+      try {
+        await this.editPost();
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    async deletePostMethod() {
+      try {
+        if (!confirm("게시글을 삭제하시겠습니까?")) {
+          return;
+        }
+
+        await this.deletePost(this.boardNo);
+        this.$router.replace("/main");
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    routeEditPage() {
+      this.$router.push(`/post/${this.boardNo}/edit`);
+    },
+    logoutMethod() {
+      this.logout();
+      this.$router.push("/login");
+    },
+    routeMainPage() {
+      this.$router.push("/main");
+    }
+  }
+};
+</script>
+
+<style scoped src="@/assets/css/post/header.css"></style>
+```
+
+* 게시글 세부 정보에서 상단 버튼에 있는 수정, 삭제 버튼을 글 작성자에 한해서 활성화시켰다.
+* 삭제 버튼 클릭 시, confirm 창을 하나 띄우고 확인 버튼을 클릭하게 되면 boardNo로 조회하여 해당 게시글, 좋아요 정보, 댓글까지 모두 삭제시키는 기능을 구현하였다.
+* 수정 버튼 클릭 시, 해당 게시글을 수정할 수 있는 페이지로 이동시키는 메소드를 작성하였다.
