--- a/_posts/2021-05-04-0503-0509.md
+++ b/_posts/2021-05-04-0503-0509.md
@@ -410,3 +410,89 @@ export default {
 * 게시글 세부 정보에서 상단 버튼에 있는 수정, 삭제 버튼을 글 작성자에 한해서 활성화시켰다.
 * 삭제 버튼 클릭 시, confirm 창을 하나 띄우고 확인 버튼을 클릭하게 되면 boardNo로 조회하여 해당 게시글, 좋아요 정보, 댓글까지 모두 삭제시키는 기능을 구현하였다.
 * 수정 버튼 클릭 시, 해당 게시글을 수정할 수 있는 페이지로 이동시키는 메소드를 작성하였다.
+
+## 0506
+# 게시글 수정 기능
+
+```vue
+<!-- PostEditForm -->
+<template>
+  <div class="content_mainBox">
+    <div class="content_tableArea02">
+      <table class="content_mainTable02">
+        <colgroup>
+          <col style="width: 8%;" />
+          <col />
+        </colgroup>
+        <tr>
+          <th>제목</th>
+          <td>
+            <input
+              type="text"
+              class="board_write"
+              placeholder="제목을 입력해 주세요."
+              v-model="title"
+            />
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="content_mainCont">
+      <textarea placeholder="내용을 입력하세요." v-model="content"></textarea>
+    </div>
+  </div>
+</template>
+
+<script>
+import { mapState, mapActions } from "vuex";
+
+export default {
+  data() {
+    return {
+      boardNo: this.$route.params.boardNo,
+      title: "",
+      content: ""
+    };
+  },
+  computed: {
+    ...mapState({
+      boardInfo: state => state.board.boardInfo
+    })
+  },
+  methods: {
+    ...mapActions(["getBoardDetail", "editPost"]),
+    async getBoardDetailMethod() {
+      try {
+        await this.getBoardDetail(this.boardNo);
+        this.title = this.boardInfo.title;
+        this.content = this.boardInfo.content;
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    async editPostMethod() {
+      try {
+        const post = {
+          boardNo: this.boardNo,
+          title: this.title,
+          content: this.content
+        };
+
+        await this.editPost(post);
+        this.$router.push(`/post/${this.boardNo}`);
+      } catch (error) {
+        console.log(error.response);
+        alert(error.response.data.message);
+      }
+    }
+  },
+  created() {
+    this.getBoardDetailMethod();
+  }
+};
+</script>
+
+<style scoped src="@/assets/css/post/form.css"></style>
+```
+
+* 게시글 수정 기능은 댓글 수정 기능과 비슷한 원리로 header에서 이벤트를 받아서 실행시켜 기능을 완성하였다.
