--- a/_posts/2021-05-04-0503-0509.md
+++ b/_posts/2021-05-04-0503-0509.md
@@ -495,4 +495,55 @@ export default {
 <style scoped src="@/assets/css/post/form.css"></style>
 ```
 
-* 게시글 수정 기능은 댓글 수정 기능과 비슷한 원리로 header에서 이벤트를 받아서 실행시켜 기능을 완성하였다.
+* 게시글 수정 기능은 작성 기능과 비슷한 원리로 header에서 이벤트를 받아서 실행시켜 기능을 완성하였다.
+
+## 0507
+# 개행과 띄워쓰기
+이제 메인 기능은 모두 완성 시켰다. 그러나 세부적으로 오류들을 수정할 것이 남아있어서 마무리 짓기로 하였다.  
+우선 가장 먼저 손봐야 할 부분은 게시글을 작성할 때, 엔터키를 입력하면 나중에 글을 불러올 때 한 줄이 넘어간 채로 받아와야 했는데 원하지 않는 결과를 얻게 되었다.  
+이를 해결하기 위해 db에 게시글을 저장할 때 \n 이스케이프 문자를 `<br/>`로 치환하여 저장하고, 여러 번 띄워쓰기를 입력하는 것 역시 마찬가지로 해결하기 위해 `&nbsp;`로 치환하여 저장하였다.
+
+```vue
+<!-- PostContent.vue -->
+<template>
+  <div class="content" v-html="boardInfo.content"></div>
+</template>
+
+<!-- PostForm.vue -->
+<script>
+import { mapActions } from "vuex";
+
+export default {
+  data() {
+    return {
+      title: "",
+      content: ""
+    };
+  },
+  methods: {
+    ...mapActions(["addPost"]),
+    async addPostMethod() {
+      try {
+        const post = {
+          title: this.title,
+          content: this.formatContent(this.content)
+        };
+        const result = await this.addPost(post);
+        console.log(result);
+        this.$router.push("/main");
+      } catch (error) {
+        console.log(error.response);
+        alert(error.response.data.message);
+      }
+    },
+    formatContent(str) {
+      str = str.replace(/\n/g, "<br/>");
+      return str.replace(/ /g, "&nbsp;&nbsp;");
+    }
+  }
+};
+</script>
+```
+* 기능의 핵심만 보여주기 위해 필요한 부분만 작성하였다.
+* 우선 게시글을 작성하는 폼에서 api를 호출하기 전에 파라미터 content에 값을 원하는 값으로 치환하는 formatContent를 이용해서 값을 넣고 db에 저장한다.
+* db에는 개행문자 대신 `<br/>`태그가, 띄워쓰기 대신 `&nbsp;`가 저장되어있기 때문에, 게시글을 보여주는 템플릿에서 v-html을 사용하여 정상적으로 띄워쓰기와 개행이 적용된 게시글을 나타낼 수 있다.
