--- a/_posts/2021-05-04-0503-0509.md
+++ b/_posts/2021-05-04-0503-0509.md
@@ -546,4 +546,108 @@ export default {
 ```
 * 기능의 핵심만 보여주기 위해 필요한 부분만 작성하였다.
 * 우선 게시글을 작성하는 폼에서 api를 호출하기 전에 파라미터 content에 값을 원하는 값으로 치환하는 formatContent를 이용해서 값을 넣고 db에 저장한다.
-* db에는 개행문자 대신 `<br/>`태그가, 띄워쓰기 대신 `&nbsp;`가 저장되어있기 때문에, 게시글을 보여주는 템플릿에서 v-html을 사용하여 정상적으로 띄워쓰기와 개행이 적용된 게시글을 나타낼 수 있다.
+* db에는 개행문자 대신 `<br/>`태그가, 띄워쓰기 대신 `&nbsp;`가 저장되었기 때문에, 게시글을 보여주는 템플릿에서 v-html을 사용하여 정상적으로 띄워쓰기와 개행이 적용된 게시글을 나타낼 수 있다.
+
+## 0508
+# 날짜 포맷
+현재는 백엔드 서버에서 날짜를 `yyyy-mm-dd hh:mm:ss` 형식으로 받아오고 있다.  
+게시글 목록을 보여줄 때 그날 작성한 글은 시간과 분만, 그 외의 목록은 연도와 달, 일까지만 출력하도록 필터를 사용해서 구현하였다.
+
+```vue
+<template>
+  <div class="content_mainBox">
+    <div class="content_search">
+      <input
+        type="text"
+        class="login_id"
+        placeholder="검색어를 입력해주세요"
+        v-model="searchWord"
+        @keyup.enter="getBoardListMethod"
+      />
+      <button class="searchBtn" title="search" @click="getBoardListMethod">
+        검색
+      </button>
+    </div>
+
+    <div class="result_total">검색결과 {{ boardList.totalCnt }}건</div>
+
+    <div class="content_tableArea">
+      <table class="content_mainTable">
+        <colgroup>
+          <col style="width: 10%;" />
+          <col />
+          <col style="width: 15%;" />
+          <col style="width: 15%;" />
+          <col style="width: 10%;" />
+        </colgroup>
+        <tr>
+          <th>No</th>
+          <th>제목</th>
+          <th>작성자</th>
+          <th>작성일</th>
+          <th>좋아요</th>
+        </tr>
+        <tr v-for="(board, index) in boardList.list" v-bind:key="index">
+          <td>{{ board.boardNo }}</td>
+          <td>
+            <a @click="routeDetailPage(board.boardNo)">{{ board.title }}</a>
+            <span class="comment_cnt" v-if="board.commentCnt != 0">
+              [{{ board.commentCnt }}]
+            </span>
+          </td>
+          <td>{{ board.memberName }}</td>
+          <td>{{ board.regDate | formatDate }}</td>
+          <td>{{ board.likeCnt }}</td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="no_result" v-if="boardList.totalCnt == 0">
+      검색 결과가 없습니다.
+    </div>
+    <pagination
+      @update="changePage"
+      v-bind:currentPageNo="boardList.currentPageNo"
+      v-bind:totalCnt="boardList.totalCnt"
+      v-bind:recordsPerPage="boardList.recordsPerPage"
+      v-bind:pagePerLink="5"
+    >
+    </pagination>
+  </div>
+</template>
+
+<script>
+export default {
+  filters: {
+    formatDate(regDate) {
+      const now = new Date();
+      const year = now.getFullYear();
+      const month = now.getMonth() + 1;
+      const date = now.getDate();
+
+      const regYear = regDate.slice(0, 4);
+      let regMonth = "";
+      if (regDate.charAt(5) == 0) {
+        regMonth = regDate.charAt(6);
+      } else {
+        regMonth = regDate.slice(5, 7);
+      }
+      let regDay = "";
+      if (regDate.charAt(8) == 0) {
+        regDay = regDate.charAt(9);
+      } else {
+        regDay = regDate.slice(8, 10);
+      }
+
+      if (regYear == year && regMonth == month && regDay == date) {
+        return regDate.slice(10, 16);
+      } else {
+        return regDate.slice(0, 10);
+      }
+    }
+  }
+}
+<script />
+```
+* 현재 시간과 받아온 시간을 비교하여, 연도 달 일이 일치하다면 시간과 분만, 아니라면 날짜를 출력하는 filter 함수를 작성하였다.
+* 필터의 사용법은 데이터 바인딩을 한 오른쪽에 `|` 연산자를 사용하여 필터 함수 이름을 작성하는 것이다.
