--- a/_posts/2021-05-04-0503-0509.md
+++ b/_posts/2021-05-04-0503-0509.md
@@ -651,3 +651,63 @@ export default {
 ```
 * 현재 시간과 받아온 시간을 비교하여, 연도 달 일이 일치하다면 시간과 분만, 아니라면 날짜를 출력하는 filter 함수를 작성하였다.
 * 필터의 사용법은 데이터 바인딩을 한 오른쪽에 `|` 연산자를 사용하여 필터 함수 이름을 작성하는 것이다.
+
+## 0509
+현재는 로그인을 하면 쿠키에 jwt 토큰과 회원이름 정보가 들어가도록 구현되어 있다.  
+하지만 굳이 쿠키에 회원이름을 노출시킬 필요 없이 jwt안에 넣으면 되겠다는 생각이 들어서 리팩토링 하기로 했다.
+우선 백엔드 영역에서 `/jwt` api를 호출받으면 회원 번호와 추가로 회원 이름을 반환해주도록 구현하였다.
+
+```java
+public class JwtTokenUtil {
+    SecretKey key = Keys.secretKeyFor(SignatureAlgorithm.HS256);
+    private long tokenValidMillisecond = 1000L * 60 * 60;
+
+    // 토큰 생성
+    public String createToken(String userPk, String memberName) {
+        Map<String, Object> claims = new HashMap<>();
+        claims.put("memberName", memberName);
+        Date now = new Date();
+        Date expiration = new Date(now.getTime() + tokenValidMillisecond);
+
+        return Jwts.builder()
+                .setClaims(claims)  // 토큰 정보 설정
+                .setSubject(userPk) // 유저 번호 설정
+                .setIssuedAt(now)   // 토큰 발급 시간 설정
+                .setExpiration(expiration)    // 토큰 만료 시간 설정
+                .signWith(key, SignatureAlgorithm.HS256)
+                .compact();
+    }
+
+    // 토큰에서 회원 이름 추출
+    public String getMemberName(String token) {
+        return Jwts.parserBuilder()
+                .setSigningKey(key)
+                .build()
+                .parseClaimsJws(token).getBody().get("memberName", String.class);
+    }
+```
+* 먼저 JwtToken을 생성하는 메소드에서 claims를 HashMap으로 구현하여 memberName을 파라미터로하여 토큰을 생성하도록 설정했다.
+* 그리고 회원 이름을 꺼낼 수 있는 메소드를 작성하였다.
+
+```java
+@RequiredArgsConstructor
+@Slf4j
+public class BearerAuthInterceptor implements HandlerInterceptor {
+
+    private final AuthorizationExtractor authorizationExtractor;
+    private final JwtTokenUtil jwtTokenUtil;
+
+    @Override
+    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
+
+        String memberPk = jwtTokenUtil.getMemberPk(token);
+        String memberName = jwtTokenUtil.getMemberName(token);
+        request.setAttribute("memberPk", memberPk);
+        request.setAttribute("memberName", memberName);
+
+        return true;
+    }
+}
+```
+* 인터셉터에서 토큰을 넘겨받았을 때, 정보에서 memberName을 꺼내서 attribute에 설정하도록 했다.
+* 그리고 util에서 memberName을 꺼내서 반환하도록 하는 메소드를 작성하고 이를 이용해서 회원 이름을 반환해주는 api를 구현하였다.
