--- a/_posts/2021-05-13-0510-0516.md
+++ b/_posts/2021-05-13-0510-0516.md
@@ -61,3 +61,40 @@ export const member = {
 * getJwtInfo 메소드를 로그인, 회원가입 페이지를 제외하고 모든 페이지에서 실행시켜서 정보를 이용해 페이지를 구성할 수 있도록 구현했다.
 
 
+## 0511
+# 토큰 유효 기간 만료 시 alert 창 2회 호출 수정 및 기본 페이지 변경
+토큰이 만료 되었을 때, api 인터셉터 catch 문에서 alert 메시지를 띄우게 되면 페이지를 열 때 기본으로 호출하는 메소드의 개수에 따라서 alert 창이 나타나서 이 오류를 수정하였다.
+
+```javascript
+// api/member.js
+
+import { axiosService, axiosServiceWithAuth } from "./index";
+import { deleteCookie } from "../utils/cookies";
+
+const register = async data => {
+  return await axiosService.post("members/new", data);
+};
+
+const login = async data => {
+  return await axiosService.post("members/login", data, {
+    withCredentials: true
+  });
+};
+
+const getJwtInfo = async () => {
+  try {
+    return await axiosServiceWithAuth.post("jwt");
+  } catch (error) {
+    if (error.response.status === 401) {
+      deleteCookie("jwt");
+      alert("접속이 종료 되었습니다. 다시 로그인 하세요.");
+      location.replace("/login");
+    }
+  }
+};
+
+export default { register, login, getJwtInfo };
+```
+* api 폴더 안에 있는 모든 메소드를 async로 변경하고, getJwtInfo 메소드는 로그인과 회원가입을 제외한 모든 페이지에서 호출되므로 try catch 문으로 status가 401이면 쿠키를 삭제하고, alert 창을 띄운 후 로그인 페이지로 이동하는 로직을 구현하였다.
+* 그리고 라우터에서 /main 페이지를 기본페이지로 설정하여 권한이 필요한 페이지들에서는 페이지를 열기전에 jwt 쿠키가 없다면 login 페이지로 이동하도록 로직을 설정하여 논리적으로 페이지간의 이동이 올바르게 수정하였다.
+
