--- a/_posts/2021-05-13-0510-0516.md
+++ b/_posts/2021-05-13-0510-0516.md
@@ -98,3 +98,37 @@ export default { register, login, getJwtInfo };
 * api 폴더 안에 있는 모든 메소드를 async로 변경하고, getJwtInfo 메소드는 로그인과 회원가입을 제외한 모든 페이지에서 호출되므로 try catch 문으로 status가 401이면 쿠키를 삭제하고, alert 창을 띄운 후 로그인 페이지로 이동하는 로직을 구현하였다.
 * 그리고 라우터에서 /main 페이지를 기본페이지로 설정하여 권한이 필요한 페이지들에서는 페이지를 열기전에 jwt 쿠키가 없다면 login 페이지로 이동하도록 로직을 설정하여 논리적으로 페이지간의 이동이 올바르게 수정하였다.
 
+## 0512
+# 404 NotFound 페이지 생성
+잘못된 url로 접근했을 때, 잘못된 요청임을 알려주는 페이지를 생성하였다.
+
+```javascript
+const routes = [
+  {
+    path: "*",
+    component: () => import("@/views/NotFoundPage.vue")
+  }
+];
+```
+* 우선 router에서 위와 같이 설정을 하면, 내가 지정해 둔 페이지 url 외에 다른 방식으로 접근하였을 때, NotFoundPage 컴포넌트를 화면에 노출시킨다.
+
+```vue
+<template>
+  <div class="content_mainBox">
+    <div class="error_message">페이지를 찾을 수 없습니다.</div>
+    <button class="btn_basic" @click="routeMain">홈페이지 이동</button>
+  </div>
+</template>
+<script>
+export default {
+  methods: {
+    routeMain() {
+      this.$router.push("/main");
+    }
+  }
+};
+</script>
+
+<style scoped src="@/assets/css/notFoundPage.css"></style>
+```
+* NotFoundPage는 위와 같이 간단한 메시지와 함께 홈페이지로 이동하는 버튼을 화면에 표시하였다.
