--- a/_posts/2021-05-13-0510-0516.md
+++ b/_posts/2021-05-13-0510-0516.md
@@ -132,3 +132,168 @@ export default {
 <style scoped src="@/assets/css/notFoundPage.css"></style>
 ```
 * NotFoundPage는 위와 같이 간단한 메시지와 함께 홈페이지로 이동하는 버튼을 화면에 표시하였다.
+
+## 0513
+메인화면에서 검색과 페이징을 모두 처리하도록 구현했는데, 다른 페이지로 넘어갔다가 뒤로가기를 클릭하면 무조건 모든 게시물의 첫 번째 페이지로 이동하는 것이 마음에 들지 않았다.  
+그래서 main 페이지에 query string을 사용하여 각기 다른 url을 가지도록 하여 뒤로가기를 구현하였다.
+
+```vue
+<template>
+  <div class="content_mainBox">
+    <div class="content_search">
+      <input
+        type="text"
+        class="login_id"
+        placeholder="검색어를 입력해주세요"
+        v-model="searchWord"
+        @keyup.enter="getSearchListMethod"
+      />
+      <button class="searchBtn" title="search" @click="getSearchListMethod">
+        검색
+      </button>
+    </div>
+
+    <div class="result_total">검색결과 {{ boardList.totalCnt }}건</div>
+
+    <div class="content_tableArea">
+      <table class="content_mainTable">
+        <colgroup>
+          <col style="width: 10%;" />
+          <col />
+          <col style="width: 15%;" />
+          <col style="width: 15%;" />
+          <col style="width: 10%;" />
+        </colgroup>
+        <tr>
+          <th>No</th>
+          <th>제목</th>
+          <th>작성자</th>
+          <th>작성일</th>
+          <th>좋아요</th>
+        </tr>
+        <tr v-for="(board, index) in boardList.list" v-bind:key="index">
+          <td>{{ board.boardNo }}</td>
+          <td>
+            <a @click="routeDetailPage(board.boardNo)">{{ board.title }}</a>
+            <span class="comment_cnt" v-if="board.commentCnt != 0">
+              [{{ board.commentCnt }}]
+            </span>
+          </td>
+          <td>{{ board.memberName }}</td>
+          <td>{{ board.regDate | formatDate }}</td>
+          <td>{{ board.likeCnt }}</td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="no_result" v-if="boardList.totalCnt == 0">
+      검색 결과가 없습니다.
+    </div>
+    <pagination
+      @update="changePage"
+      v-bind:currentPageNo="boardList.currentPageNo"
+      v-bind:totalCnt="boardList.totalCnt"
+      v-bind:recordsPerPage="boardList.recordsPerPage"
+      v-bind:pagePerLink="5"
+    >
+    </pagination>
+  </div>
+</template>
+
+<script>
+import { mapActions } from "vuex";
+import Pagination from "./Pagination";
+
+export default {
+  data() {
+    return {
+      boardList: {},
+      currentPageNo: 1,
+      searchWord: ""
+    };
+  },
+  methods: {
+    ...mapActions(["getBoardList", "getBoardSearchList"]),
+    async getBoardListMethod() {
+      try {
+        const param = {
+          searchWord: this.$route.query.searchWord,
+          currentPageNo: this.$route.query.currentPageNo
+        };
+
+        if (param.searchWord === "") {
+          this.boardList = await this.getBoardList(param);
+        } else {
+          this.searchWord = this.$route.query.searchWord;
+          this.boardList = await this.getBoardSearchList(param);
+        }
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    async getSearchListMethod() {
+      try {
+        const param = {
+          searchWord: this.searchWord,
+          currentPageNo: 1
+        };
+
+        if (this.searchWord.trim() !== this.$route.query.searchWord) {
+          this.$router.push({ path: "/main", query: param });
+        }
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    async changePage(pageNo) {
+      try {
+        this.currentPageNo = pageNo;
+
+        const param = {
+          searchWord: this.searchWord.trim(),
+          currentPageNo: this.currentPageNo
+        };
+
+        if (this.$route.query.currentPageNo != pageNo) {
+          this.$router.push({ path: "/main", query: param });
+        }
+      } catch (error) {
+        console.log(error);
+      }
+    },
+    async changeList(query) {
+      try {
+        this.searchWord = query.searchWord;
+
+        if (query.searchWord === "") {
+          this.boardList = await this.getBoardList(query);
+        } else {
+          this.boardList = await this.getBoardSearchList(query);
+        }
+      } catch (error) {
+        console.log(error.response);
+      }
+    },
+    routeDetailPage(boardNo) {
+      this.$router.push(`/post/${boardNo}`);
+    }
+  },
+  created() {
+    this.getBoardListMethod();
+  },
+  watch: {
+    $route(to) {
+      this.changeList(to.query);
+    }
+  },
+  components: {
+    Pagination
+  }
+};
+</script>
+
+<style scoped src="../../assets/css/board/boardList.css"></style>
+```
+* 처음 페이지를 생성할 때는 기본적으로 주어지는 query에 맞게 값을 보내 그에 해당하는 리스트를 받아 온다.
+* watch 속성을 사용하여 route 즉 쿼리에 해당하는 데이터가 변할 때마다 새로운 리스트를 받아오는 메소드를 실행시킨다.
+* 검색을 이용할 때와 그냥 페이징 처리만 할 때를 구분하여 섬세하게 오류를 처리하는 부분이 어려웠던 것 같다.
