--- a/_posts/2021-05-13-0510-0516.md
+++ b/_posts/2021-05-13-0510-0516.md
@@ -297,3 +297,49 @@ export default {
 * 처음 페이지를 생성할 때는 기본적으로 주어지는 query에 맞게 값을 보내 그에 해당하는 리스트를 받아 온다.
 * watch 속성을 사용하여 route 즉 쿼리에 해당하는 데이터가 변할 때마다 새로운 리스트를 받아오는 메소드를 실행시킨다.
 * 검색을 이용할 때와 그냥 페이징 처리만 할 때를 구분하여 섬세하게 오류를 처리하는 부분이 어려웠던 것 같다.
+
+## 0514
+기존에는 띄워쓰기와 개행 기능을 위해 db에 \n과 띄워쓰기를 `<br >`과 `&nbsp;`로 치환하여 저장하였는데, 그렇게 했을 경우 추가적인 공간을 잡아먹는다는 단점과 like 구문을 이용해 db에서 검색을 하였을 때, 올바르지 않은 결과를 반환한다는 단점이 있어서 구조를 개선하였다.
+
+```javascript
+/* eslint-disable no-unused-vars */
+import boardService from "@/api/board";
+
+export const board = {
+  state: {
+    boardInfo: {},
+    commentList: []
+  },
+  actions: {
+    async getBoardDetail({ commit, dispatch }, boardNo) {
+      const result = await boardService.getBoardDetail(boardNo);
+      commit("setBoardInfo", result.data.data.info);
+      dispatch("getCommentList", {
+        boardNo: boardNo,
+        recordsPerPage: 100
+      });
+    },
+    async getCommentList({ commit }, data) {
+      const result = await boardService.getCommentList(data);
+      commit("setCommentList", result.data.data.list);
+    }
+  },
+  mutations: {
+    setBoardInfo(state, info) {
+      let boardContent = info.content.replace(/\n/g, "<br/>");
+      boardContent = boardContent.replace(/ /g, "&nbsp;&nbsp;");
+      info.content = boardContent;
+      state.boardInfo = info;
+    },
+    setCommentList(state, list) {
+      list.forEach(comment => {
+        comment.content = comment.content.replace(/\n/g, "<br/>");
+        comment.content = comment.content.replace(/ /g, "&nbsp;&nbsp;");
+      });
+      state.commentList = list;
+    }
+  }
+};
+```
+* 기존에는 글을 작성하거나 댓글을 작성할 때 문자열을 치환하여 db에 저장했었는데, 굳이 그렇게 하지 않고 꺼내올 때 문자열을 치환해도 똑같은 결과를 준다는 것을 알고 결과를 받아올 때 문자열을 치환하는 기능을 작성하였다.
+* 결과적으로 코드도 훨씬 간결해지고, 검색 기능도 정상적으로 동작하여 모든 기능을 완전히 완성시켰다.
