--- a/_posts/2021-05-13-0510-0516.md
+++ b/_posts/2021-05-13-0510-0516.md
@@ -343,3 +343,31 @@ export const board = {
 ```
 * 기존에는 글을 작성하거나 댓글을 작성할 때 문자열을 치환하여 db에 저장했었는데, 굳이 그렇게 하지 않고 꺼내올 때 문자열을 치환해도 똑같은 결과를 준다는 것을 알고 결과를 받아올 때 문자열을 치환하는 기능을 작성하였다.
 * 결과적으로 코드도 훨씬 간결해지고, 검색 기능도 정상적으로 동작하여 모든 기능을 완전히 완성시켰다.
+
+## 0515
+# SimpleBoard 프로젝트를 마치며...
+12월에 자바 기초 공부부터 시작하여 스프링과 javascript, vue까지 공부를 마쳤다.  
+3월부터는 지금까지 공부했던 것을 토대로 시작한 것이 이번 프로젝트인대, 단순한 게시판임에도 불구하고 꽤나 오랜 시간이 걸렸다.  
+하지만 생각보다 많이 공들인 프로젝트이고 개발에 있어서 시야를 넓혀주고 직접 구현해보며 많이 발전한 것 같다.  
+
+## Git
+* 프로젝트를 프론트와 백으로 나누어 구성하였고, 깃으로 프로젝트를 관리하기 위해 깃 기본 명령어와 tool 사용법을 익혔다.
+
+## DB
+* 처음으로 데이터베이스를 설계하고 필요한 컬럼을 고민하는 시간을 가지며 테이블을 완성해나갔다. 작은 규모의 테이블 설계였지만, 나중에 더 큰 규모의 테이블을 설계할 때 도움이 될 것이라는 확신이 들었다.
+* sql wordbench 사용법을 익히고 DB를 스프링 환경과 연결하였다.
+
+## Backend
+* 백엔드 부분은 의존성을 추가하는 것부터 공부의 시작이었다. 필요하지 않은 의존성 추가를 최대한 하지 않기 위해 많이 찾아보며 필요한 의존성만 추가하고자 노력했다.
+* 필요한 로그만을 남기기 위해 logback을 공부하고 프로젝트에 적용하는데 많은 시간을 쏟았다.
+* Jwt를 사용해 인증 관련 부분을 구현하려고 Github 공식 문서를 확인하며 Jwt에 대해 깊게 공부하고 활용하였다.
+* 단순히 기능을 구현하기만 하는 것이 아니라 어떻게 하면 구조를 잘 짤 수 있을지, 현업에서는 어떠한 방식으로 이것을 구현할지를 깊게 고민하며 프로젝트를 진행하였다.
+
+## Frontend
+* vue 프로젝트를 실행하여 환경을 구성하는 법을 익히고, 프로젝트를 구조화하는 방법을 현업에서는 어떻게 할지 고민하며 진행했다.
+* 상태 관리를 위해 vuex 사용법을 익히고 프로젝트에 적극 활용하였다.
+* 404에러, 권한이 없을 때 url로 적절하지 않은 접근, validation 등 기본적인 기능 구현은 물론이고 세부적인 기타 사항들까지 빠트리지 않고 해결하기 위해 많은 시간을 쏟았다.
+* 마지막까지 마음에 들지 않은 버그들을 모두 잡고, 무사히 프로젝트를 마무리 지었다.
+
+> 이번 프로젝트를 하면서 생각보다 고민해야할 것들이 정말 많음을 깨닫게 되었다.
+> 이 프로젝트를 계기로 다음 프로젝트 때는 더 좋은 결과물을 낼 수 있을 것 같다는 자신감이 들었다.
