--- a/_posts/2021-05-19-0517-0523.md
+++ b/_posts/2021-05-19-0517-0523.md
@@ -6,3 +6,29 @@ category: TIL
 ## 0516 ~ 0520
 제주도 여행
 
+## 0521
+# MongoDB 인덱스
+### 인덱스
+* 컬렉션내의 임의의 문서를 빠르게 접근하도록 하는 자료구조
+* 인덱스는 데이터 파일과는 별도의 파일에 저장됨
+* 검색 속도를 향상시키나 인덱스 저장 공간 필요
+* 삽입, 삭제, 수정 연산의 속도 저하
+
+### 인덱스 구조
+* 엔트리구조 : <탐색키필드, 문서에 대한 포인터>
+* 엔트리들은 탐색 키 필드 값의 오름차순으로 정렬되어 있음
+
+### 인덱스 생성 메소드 createIndex()
+`db.컬렉션명.createIndex(<키> , <옵션>)`
+* <키>는 문서 형식 {키:1 or -1, ... }으로 명세 (1:오름, -1:내림) 
+* <옵션>도 문서 형식 {키:값, ... }으로 명세
+
+### 단일/복합 인덱스 (single/compound index) 생성
+* 단일 키 인덱스 (하나의 필드만 사용)
+* 복합 키 인덱스 (2개 이상의 필드를 사용)
+* 키의 순서가 중요함 db.mycol.createIndex({“deptname”:1, “year”:-1})
+
+### 다중키 인덱스(multikey index)
+* 필드의 값이 배열(예, 취미)인 경우 생성되는 인덱스(별도 지정 불필요)
+* 배열의 각 요소마다 인덱스 엔트리 유지
+* 같은 배열에서 생성된 여러 엔트리들은 동일한 문서를 참조
