--- a/_posts/2021-05-19-0517-0523.md
+++ b/_posts/2021-05-19-0517-0523.md
@@ -32,3 +32,11 @@ category: TIL
 * 필드의 값이 배열(예, 취미)인 경우 생성되는 인덱스(별도 지정 불필요)
 * 배열의 각 요소마다 인덱스 엔트리 유지
 * 같은 배열에서 생성된 여러 엔트리들은 동일한 문서를 참조
+
+## 0522
+# 새로운 프로젝트를 준비하며...
+
+게시판 프로젝트를 모두 마치고 이제는 제대로 된 아이디어를 담은 프로젝트를 시작하려고 한다.  
+분석과 설계에 많은 시간을 들여서 이 프로젝트로 성공해보고 싶다는 욕심이 생겼다.  
+우선은 기능을 확실히 정하고 어떤 프레임워크를 사용하여 프로젝트를 완성시킬지 고민해봐야겠다.  
+리액트를 사용할 수도 있으니 코딩테스트와 리액트 공부를 함께 진행하여 모든 상황에 대비해두어야겠다.
