--- a/_posts/2021-05-19-0517-0523.md
+++ b/_posts/2021-05-19-0517-0523.md
@@ -40,3 +40,35 @@ category: TIL
 분석과 설계에 많은 시간을 들여서 이 프로젝트로 성공해보고 싶다는 욕심이 생겼다.  
 우선은 기능을 확실히 정하고 어떤 프레임워크를 사용하여 프로젝트를 완성시킬지 고민해봐야겠다.  
 리액트를 사용할 수도 있으니 코딩테스트와 리액트 공부를 함께 진행하여 모든 상황에 대비해두어야겠다.
+
+## 0523
+# Aggregation 프레임워크
+## 3가지 유형의 집계 연산 기능 제공
+* 집계 파이프라인
+* 맵-리듀스 함수
+* 단순 목적 집계 메소드
+
+### 집게 파이프 라인
+* 여러 단계를 거쳐 최종 결과 산출
+* 각 단계마다 다양한 파이프라인 작업 가능
+* ex) $project, $group, $match, $limit, $skip, $sort, 등 10개 연산자  
+-> 각 단계의 출력결과가 다음 단계의 입력으로 제공
+
+### 집계 프레임워크
+```
+db.mycol.aggregate([
+  {$group : { _id : "$by_user“ , num_tutorial : {$sum : 1} }}
+])
+```
+### $group 연산자
+* 입력 문서의 by_user 필드를 기준으로 그룹화하고, 그 그룹의 by_user 필드의 값은 결과 출력 시 _id 필드 값으로 사용
+* _id 필드는 식별자 용 필드로 반드시 있어야 함(필드명 변경 불가)
+
+### $sum 연산자
+* 각 그룹에 대해 그 그룹에 속하는 문서가 있을 때 마다 num_tutorial 필드 값을 1씩 증가
+* 아래와 같은 뜻이다.
+```sql
+select by_user as _id, count(*) as num_tutorial
+from mycol
+group by by_user;
+```
