--- a/_posts/2021-05-25-0524-0530.md
+++ b/_posts/2021-05-25-0524-0530.md
@@ -13,3 +13,93 @@ category: TIL
 1차는 자기소개서와 역량 테스트를 종합하여 진행하는데, 역량 테스트는 좀 특이하게 html과 css에 대한 이해를 기반으로 시험을 진행한다고 한다.  
 마침 html과 css 사용법에 대한 기본은 알지만, 조금 더 실력을 증진시키고 싶다는 생각이 들어 이를 동기삼아 약 10일간 정말 열심히 학습해보고자 한다.  
 설사 붙지 못한다고 하더라도 부족했던 퍼블리싱 실력을 키울 좋은 기회가 될 것 같다는 느낌이 들었다.
+
+## 0525
+# HTML 학습 1일차
+이번에 역량 테스트를 진행하기 위해서 패스트캠퍼스 측에서 HTML/CSS에 대한 인터넷 강의를 지원해줘서 이를 이용해 공부하기로 했다.  
+정말 신기했던 건 강의를 진행하시던 분이 내가 개발할 때 참고했던 블로그를 작성하시는 분이었다는 것이다.  
+Vuex 포스팅을 참고하여 최근 개발을 진행했었는데, 이렇게 보게 되니 반갑기도 하고 블로그 상단에 있는 캐리커쳐보다 훨씬 멋있는 선생님이셔서 신기했다.  
+강의의 내용도 좋고 잘 가르쳐줘서 학습을 하는데에 많은 도움이 될 것 같다는 생각이 들었다.  
+그날그날 학습한 강의 내용을 정리하여 포스팅 하고자 한다.  
+오늘은 입문 편에 해당하는 아는 내용들을 복습하고, 개념 단어들에 대해서 학습했다.
+
+# 학습 내용
+
+**HTML**
+페이지에 제목, 문단, 표, 이미지, 동영상 등을 정의하고 구조와 의미를 부여하는 정적 언어  
+온전히 튼튼한 구조를 만드는 것에만 집중해야 한다.
+
+
+**CSS**
+마크업 언어가 실제 표시되는 방법을 지정하여 콘텐츠 구조를 꾸며주는 정적 언어  
+웹의 시각적인 표현을 담당
+
+## 주요 개념
+### 웹 표준
+* 웹에서 사용되는 표준 기술이나 규칙
+* 표준화 제정 단계의 권고안에 해당하는 기술
+
+### 크로스 브라우징
+* 다르게 구동되는 여러 브라우저에서 동일한 사용자 경험을 줄 수 있도록 제작하는 기술, 방법
+* IE에서 동작하게 하는 것을 크로스 브라우징이라고 부르기도 한다.
+
+### 웹 접근성
+* 정상적인 웹 콘텐츠 사용이 가능한 일반 사용자부터 고령자, 장애인 같은 신체적, 환경적 조건에 제한이 있는 사용자를 포함해 모든 사용자들이 동등하게 접근할 수 있는 웹 콘텐츠를 제작하는 방법
+
+## 웹에서 사용하는 이미지
+### 비트맵
+* 각 픽셀이 모여 만들어진 정보의 집합
+* 픽셀 단위로 화면에 렌더링한다.
+* 정교하고 다양한 색상을 자연스럽게 표현 가능하나, 확대 및 축소 시 계단 현상으로 품질이 저하된다.
+
+#### JPG
+손실 압축을 하여 압축률이 훌륭하고 고해상도 표시장치에 적합하다.
+
+#### PNG
+비손실 압축을 하여 압축률은 조금 떨어지지만 Alpha Channel을 지원하여 투명도를 보장한다.
+
+#### GIF
+비손실 압축을 하고 8비트 컬러만 지원하여 성능은 떨어지지만, 동영상 같은 이미지를 지원한다.
+
+#### WEBP
+모두 대체할 수 있는 구글이 개발한 이미지 포맷이지만 지원 브라우저가 아직 부족하다.
+
+### 백터
+* 이미지가 가지고 있는 점, 선, 면의 위치, 색상 등의 정보를 온전히 가지고 있으며 그를 화면에 렌더링한다.
+* 확대 축소에서 자유롭고, 용량 변화가 없지만 정교한 이미지를 표현하기가 어렵다.
+
+#### SVG
+마크업 언어 기반의 벡터 그래픽을 표현하는 포맷으로 css로 스타일링이 가능하고 javascript로 이벤트 핸들링이 가능하다.
+
+## 특수 문자 용어
+
+
+| 기호 | 영어 | 한글 |  
+|:--------|:--------|--------|    
+|`		|	그레이브		  |
+|~		|	틸드					 | 물결표시
+|!		|	엑스클러메이션	|   느낌표
+|@		|	엣 사인				   |골뱅이
+|#		|	넘버, 샵					|
+|$		|	달러          |
+|%		|	퍼센트          |
+|^		|	캐럿        |
+|&		|	앰퍼센드      |
+|*		|	에스터리스크	|		 별표
+|-		|	하이픈, 대쉬	|		마이너스
+|_		|	언더스코어, 로대쉬|	밑줄
+|=		|	이퀄					  |이꼬르
+|"		|	쿼테이션 마크		|	 큰 따옴표
+|'		|	아포스트로피		|	 작은 따옴표
+|:		|	콜론					  |땡땡이
+|;		| 피리어드, 닷		|	마침표
+|?		|	퀘스쳔 마크			 | 물음표
+|/		|	슬래쉬|
+|`|`		|	버티컬 바|
+|\		| 퍼렌서시스	|		소괄호
+|{}		| 브레이스		|	 중괄호
+|[]		| 브래킷			|	 대괄호
+|<>		| 앵글 브래킷	|		꺽쇠괄호|
+
+
+
