--- a/_posts/2021-05-25-0524-0530.md
+++ b/_posts/2021-05-25-0524-0530.md
@@ -475,3 +475,244 @@ hr {
 ### `<nonscript>`
 * 스크립트를 지원하지 않는 경우에 삽입할 HTML을 정의
 * 스크립트가 동작하지 않는 환경에서만 동작
+
+## 0528
+# 역량테스트 준비 4일차
+표와 관련된 태그와 input 양식에 관한 태그, 그리고 전역적인 속성에 대해 학습하였다.
+
+# 표 콘텐츠 & 양식
+## 표
+### `<table>, <tr>, <th>, <td>`
+* 데이터 표(`<table>`)의 행(`<tr>`)과 열(`<th>`, `<td>`)을 생성
+
+#### `<td>` 속성
+* 일반 칸을 지정
+* headers - 관련된 하나 이상의 다른 머리글 칸 id 속성 값
+* colspan - 확장하려는 열의 수
+* rowspan - 확장하려는 행의 수
+
+#### `<th>` 속성
+* 머리글 칸을 지정
+* `<td>` 속성을 포함
+* abbr - 열에 대한 간단한 설명
+* scope - 자신이 누그의 머리글 칸인지 명시
+	* col : 자신의 열
+	* colgroup : 모든 열
+	* row : 자신의 행
+	* rowgroup : 모든 행
+	* auto
+
+### `<caption>`
+* 표의 제목을 설정하며 열리는 table 태그 바로 다음에 작성해야 함
+* 테이블당 하나의 태그만 사용 가능
+
+### `<colgroup>, <col />`
+* 표의 열들을 공통적으로 정의하는 컬럼(`<col>`)과 그의 집합 (`<colgroup>`)
+* 속성으로는 연속되는 열 수를 나타내는 span 보유
+
+### `<thead>, <tbody>, <tfoot>`
+* 표의 머리글, 본문, 바닥글을 지정
+* 기본적으로 테이블 레이아웃에는 영향을 주지 않는다.
+
+```html
+  <table>
+    <caption>연봉 테이블</caption>
+    <colgroup>
+      <col>
+      <col style="background-color: wheat">  
+    </colgroup>
+    <thead>
+      <tr>
+        <th>직급</th>
+        <th>연봉</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>사장</td>
+        <td>5000</td>
+      </tr>
+      <tr>
+        <td>부장</td>
+        <td>4000</td>
+      </tr>
+      <tr>
+        <td>대리</td>
+        <td>3000</td>
+      </tr>
+    </tbody>
+  </table>
+```
+
+## 양식
+### `<form>`
+* 웹 서버에 정보를 제출하기 위한 양식 범위를 정의
+* <form>이 다른 <form>을 자식 요소로 포함할 수 없음
+
+#### `<form>` 속성
+* action - 전송한 정보를 처리할 웹페이지의 URL
+* autocomplete - 사용자가 이전에 입력한 값으로 자동 완성 기능을 사용할 것인지 여부
+	* ex) on, off
+* method - 서버로 전송할 HTTP
+	* ex) get, post
+* name - 고유한 양식의 이름
+* novalidate - 서버로 전송시 양식 데이터의 유효성을 검사하지 않도록 지정
+* target - 서버로 전송 후 응답받을 방식을 지정
+
+### `<input>`
+* 사용자에게 입력 받을 데이터 양식
+
+#### `<input>` 속성
+* autocomplete - 사용자가 이전에 입력한 값으로 자동 완성 기능을 사용할 것인지 여부
+	* ex) on, off
+* autofocus - 페이지가 로드될 때 자동으로 포커스
+* checked - 양식이 선택되었음을 표시
+* disabled - 양식을 비활성화
+* form - `<form>`의 id 속성 값
+* list - 참조할 `<datalist>`의 id 속성 값
+* max,  min - 타입이 number일 때, 지정 가능한 값 제한
+* maxlength  - 타입이 text, email, password, tel, url일 경우 입력 가능 최대 문자 수 제한
+* multiple - 타입이 email, file일 때만 둘 이상의 값을 입력 가능한지 여부
+* name - 양식 이름
+* placeholder - 사용자가 입력할 값의 힌트
+* readonly - 수정 불가한 읽기 전용
+* step - 유효한 증감 숫자의 간격
+* src, alt - 타입이 image일 때 사용하는 속성
+* type - 입력 받을 데이터의 종류
+* value - 양식 초기 값
+
+### `<label>`
+* 라벨 가능 요소의 제목
+* for 속성으로 라벨 가능 요소를 참조하거나 콘텐츠로 포함
+* 이를 사용하면 글자를 클릭해도 체크나 라디오 버튼 클릭이 된다.
+
+```html
+<!-- 라벨 가능 요소를 참조 -->
+<input type="checkbox" id="user-agreement" />
+<label for="user-agreement">동의하십니까?</label>
+
+<!-- 라벨 가능 요소를 포함 -->
+<label><input type="checkbox" />동의하십니까?</label>
+```
+
+### `<button>`
+* 선택 가능한 버튼 지정
+* 속성으로는 input 태그와 같은 의미의 autofocus, disabled, form, name, type 등이 있다.
+* type의 값으로는 button, reset, submit이 온다.
+
+### `<textarea>`
+* 여러 줄의 일반 텍스트 양식
+* 속성으로는 input 태그와 같은 의미의 autocomplete, autofocus, disabled, form, maxlength, name, placeholder, readonly가 있다.
+* rows - 양식의 줄 수를 나타내는 속성
+
+### `<fieldset>, <legend>`
+* 같은 목적의 양식을 그룹화(`<fieldset>`)하여 제목(`<legend>`)을 지정
+* `<fieldset>`은 속성으로 disabled, form, name을 가질 수 있다.
+
+```html
+<form>
+  <fieldset>
+    <legend>Coffee Size</legend>
+    <label>
+        <input type="radio" name="size" value="tall" />
+        Tall
+    </label>
+    <label>
+        <input type="radio" name="size" value="grande" />
+        Grande
+    </label>
+    <label>
+        <input type="radio" name="size" value="venti" />
+        Venti
+    </label>
+  </fieldset>
+</form>
+```
+
+
+### `<select>, <datalist>, <optgroup>, <option>`
+* 옵션(`<option>, <optgroup>`)의 선택 메뉴(`<select>`)나 자동완성 (`<datalist>`)을 제공
+* select는 옵션을 선택하는 메뉴이고, datalist는 input에 미리 정의한 옵션을 지정하여 자동완성 기능을 제공하는데 사용한다.
+
+```html
+<select>
+  <optgroup label="Coffee">
+    <option>Americano</option>
+    <option>Caffe Mocha</option>
+    <option label="Cappuccino" value="Cappuccino"></option>
+  </optgroup>
+  <optgroup label="Latte" disabled>
+    <option>Caffe Latte</option>
+    <option>Vanilla Latte</option>
+  </optgroup>
+  <optgroup label="Smoothie">
+    <option>Plain</option>
+    <option>Strawberry</option>
+    <option>Banana</option>
+    <option>Mango</option>
+  </optgroup>
+</select>
+```
+
+
+### `<progress>`
+* 작업의 완료 진행률을 표시
+
+```html
+<progress value="70" max="100">70 %</progress>
+```
+
+
+# 전역 속성
+모든 HTML 요소에서 공통적으로 사용 가능한 속성
+
+### class & id
+* class는 공백으로 구분된 요소의 별칭을 지정한다.
+* id는 문서에서 고유한 식별자를 정의해서 중복해서 사용할 수 없다.
+
+### style & title & lang
+* style은 요소에 적용할 css를 선언한다
+* title은 요소에 정보를 지정하여 커서를 올려놓으면 그에 해당하는 텍스트를 보여준다.
+* lang은 요소의 언어를 지정한다.
+
+### data-*
+* 사용자 정의 데이터 속성을 지정하여 HTML에 자바스크립트에서 이용할 수 있는 데이터를 저장하는 용도로 사용
+
+```html
+<div id="me" data-my-name="junghoon" data-my-age="26">jh</div>
+```
+* 위와 같이 지정하면 자바스크렙트에서 저장한 데이터를 dataset으로 접근하여 사용할 수 있다.
+
+### draggable
+* 요소가 드래그 앤 드롭 api를 사용 가능한지 여부를 지정한다. 기본값은 auto
+
+```html
+<div draggable="true">drag</div>
+```
+
+### hidden
+* 요소를 숨기는 속성으로 양식에서 숨기고 싶은 정보가 있을 때도 활용할 수 있다.
+
+```html
+<form id="hidden-form" action="/form-action" hidden>
+  <!-- 숨겨진 양식들.. -->
+</form>
+<button form="hidden-form" type="submit">전송</button>
+```
+
+
+### tabindex
+* 탭키를 이용해 요소를 순차적으로 포커스 탐색할 순서를 지정
+* 대화형 콘텐츠는 기본적으로 코드 순서대로 탭 순서가 지정된다.
+* 비대화형 콘텐츠에 tabindex="0"을 지정하여 탭 순서를 사용할 수 있다.
+* tabindex="-1"를 통해 포커스는 가능하지만 탭 순서에서 제외 가능하다.
+* tabindex="1" 이상의 양수 값은 논리적 흐름을 방해하기 때문에 지양한다.
+
+### 절대경로와 상대경로
+* 상대 경로 : ./(생략가능) 또는 ../을 이용하여 현재 위치에서 상대적인 경로
+* 절대 경로 : http 또는 / 로 시작하여 어디에서 찾던 같은 값을 나타낸다
+
+### 특수 기호
+* `&nbsp;` - 공백
+* `&lt;` - `<`을 텍스트로 보여줌
+* `&gt;` - `>`을 텍스트로 보여줌
