--- a/_posts/2021-05-25-0524-0530.md
+++ b/_posts/2021-05-25-0524-0530.md
@@ -716,3 +716,153 @@ hr {
 * `&nbsp;` - 공백
 * `&lt;` - `<`을 텍스트로 보여줌
 * `&gt;` - `>`을 텍스트로 보여줌
+
+## 0529
+## 역량테스트 준비 5일차
+html 학습을 일단락하고, css 학습으로 넘어왔다.  
+css가 조금 더 부족하기도 하고 할 양도 많아서 열심히 해야할 것 같다.  
+오늘은 기본 실습환경 구축과 기본 문법, 그리고 기본 선택자와 복합 선택자에 대해서 학습하였다.
+
+# 실습환경
+## CSS Reset
+브라우저에 따라서 기본적으로 적용되는 스타일이 모두 다르다.  
+모든 브라우저에서 같은 환경으로 실행하기 위해 css를 초기화 해줘야 한다.
+reset.css를 검색하여 cdn으로 호출해서 css를 기본값으로 초기화 시키고 그 후에 내가 커스텀한 css를 불러와야 한다.
+
+## Emmet
+* html과 css를 조금 더 편리하게 작성할 수 있도록 하는 문법
+* 주로 태그이름을 작성하고 tab 키를 누르면 자동으로 태그가 작성된다.
+* .box을 작성하고 tab 키를 누르면 box 클래스를 가진 div가 생성된다.
+
+
+# 개요, 선택자, 상속
+## 기본 문법
+```css
+선택자 { 속성: 속성값; 속성: 속성값; }
+```
+* 위와 같은 방식은 가독성이 떨어지기 때문에 아래와 같이 작성한다.
+```css
+선택자 { 
+	속성: 속성값; 
+	속성: 속성값; 
+}
+```
+
+### 선택자
+* 속성과 값을 지정할 대상을 검색
+
+### 속성과 값
+* 검색된 대상에 지정될 css 명령
+
+### 주석
+* 문서 내 수정사항이나 설명 등을 작성
+```css
+/* 주석 문법 */
+```
+
+
+## 선언 방식
+### 인라인 방식
+* 태그의 style 속성에 직접 작성하는 방식
+
+```html
+<div style="color: red;">HELLO</div>
+```
+
+### 내장 방식
+* `<style></style>`태그 안에 작성하는 방석
+
+### 링크 방식
+* `<link>`를 이용하여 외부 문서로 css를 불러와서 사용하는 방식
+
+### `@import`방식
+* css `@import`를 이용하여 외부 문서로 css를 불러와 적용하는 방식
+* link는 html에서 css를 가져오는 반면 import는 css에서 css를 가져오는 방식이다
+```css
+@import url("./common2.css");
+```
+* link 태그는 한 번에 css를 불러오는 반면에, import 방식은 직렬 방식으로 호출하기 때문에 1번이 모두 호출되어야 2번이 호출되는 방식이다.
+
+## 기본 선택자
+### 전체 선택자
+* 모든 요소를 선택
+
+```css
+* {
+	color: red;
+}
+```
+* 전체 부분에 css를 적용하는 선택자이다.
+
+### 태그 선택자
+* 태그 이름으로 요소를 선택
+```css
+li {
+	color: red;
+}
+```
+
+### 클래스 선택자
+* html class 속성의 값으로 요소를 선택
+```css
+.orange {
+	color: red;
+}
+```
+* class="orange"를 가진 태그를 찾아 css 적용
+
+### 아이디 선택자
+* html id 속성의 값으로 요소를 선택
+```css
+#orange {
+ color: red;
+}
+```
+* id="orange"를 가진 태그를 찾아 css 적용
+
+## 복합선택자
+### 일치 선택자
+* 두 가지를 동시에 만족하는 요소 선택
+```css
+span.orange {
+	color: red;
+}
+```
+* span 태그 이면서 orange 클래스를 가진 요소에 css 적용
+
+### 자식 선택자
+* 부모를 기준으로 자식요소를 선택
+```css
+ul > .orange {
+	color: red;
+}
+```
+* ul 태그를 기준으로 자식 요소 중에서 orange 클래스를 가진 요소에 css 적용
+
+### 자손, 후손 선택자
+* 어떤 특정 선택자의 후손 요소를 선택
+* 띄워쓰기가 선택자의 기호로 사용된다.
+```css
+div .orange {
+	color: red;
+}
+```
+* div 태그를 찾아서 그 안에 있는 요소중에 orange 클래스를 가진 요소에 css 적용 
+
+### 인접 형제 선택자
+* 특정 요소의 다음 형제 요소 하나만 선택
+```css
+.orange + li {
+	color: red;
+}
+```
+* orange 클래스를 가진 요소의 바로 다음 형제 요소 하나만 선택한다.
+
+### 일반 형제 선택자
+* 특정 요소의 다음 형제 요소 모두 선택
+```css
+.orange ~ li {
+	color: red;
+}
+```
+* orange 클래스를 가진 요소의 다음 형제를 모두 선택해 css 적용
