--- a/_posts/2021-05-25-0524-0530.md
+++ b/_posts/2021-05-25-0524-0530.md
@@ -866,3 +866,176 @@ div .orange {
 }
 ```
 * orange 클래스를 가진 요소의 다음 형제를 모두 선택해 css 적용
+
+## 0530
+# 역량 테스트 준비 6일차
+가상 선택자와 가상 요소 선택자, 속성 선택자를 학습하였고, 같은 요소가 여러 선언의 대상이 될, 어떤 선언의 속성을 우선 적용할지 결정하는 우선순위에 대해 학습하였다.  
+그리고 css의 단위에 대해서도 새로 배우게 되었다.
+
+## 가상 선택자
+### hover
+* 요소에 마우스가 올라가 있는 동안에만 선택
+
+### active
+* 요소를 클릭하는 동안 선택
+
+### focus
+* 요소가 포커스 된 동안에만 선택
+* 대화형 콘텐츠에서 사용 가능
+
+```css
+a:focus {
+	color: red;
+}
+```
+
+### first child
+* 요소가 형제 요소중 첫번째 요소라면 선택
+
+```css
+.fruits li:first-child {
+	color:red;
+}
+```
+
+### last child
+* 요소가 형제 요소중 마지막 요소라면 선택
+
+### nth-child
+* 요소가 형제 요소중 n번째 요소라면 선택
+* n 키워드 사용시 0부터 해석
+
+```css
+.fruits li:nth-child(2) {
+	/* 두 번째 요소들에만 적용 */
+	/* fruits 클래스의 후손 요소들 중 2번째가 li면 적용하고 아니라면 적용하지 않는다. */
+	/* 후손 요소들 중이 아닌 자식 요소들 중에서만 적용하고 싶다면 > 를 사용한다. */
+	/* 만약 :앞에 요소를 선택하지 않으면 모든 두 번째 요소에 css가 적용된다. */
+}
+
+.fruits li:nth-child(2n) {
+	/* 짝수 번째에 있는 요소들에 적용 */
+}
+
+.fruits li:nth-child(n+3) {
+	/* 3번째 요소부터 적용 */
+}
+```
+
+### nth-of-type
+* 요소의 타입(태그이름)과 동일한 타입인 형제 요소 중 n번째 요소라면 선택
+```css
+.fruits p:nth-of-type(1) {
+	/* p 태그 중 첫 번째 */
+}	
+```
+
+### 부정 선택자
+```css
+.fruits li:not(.strawberry) {
+	color: red;
+}
+```
+* strawberry 클래스를 가진 요소만 빼고 li에 적용
+
+## 가상 요소 선택자
+### before
+* 요소 내부의 앞에, 내용을 삽입
+* 가상 클래스는 :, 가상 요소는 ::
+* 가상 요소 선택자는 내용을 적지 않더라도 content 속성을 꼭 작성해줘야한다.
+
+### after
+*  요소 내부의 뒤에, 내용을 삽입
+
+```css
+div::before {
+	content: "<";
+}
+
+div::after {
+	content: url("경로");
+}
+```
+
+## 속성 선택자
+* css의 속성을 선택자로 이용해서 css 스타일을 적용할 수 있다.
+
+```css
+/* disabled 속성을 가진 요소에 css 적용 */
+[disabled] {
+	color: red;
+}
+
+/* 속성과 값을 이용해서 요소에 css 적용 가능 */
+[type="password"] {
+	color: red;
+}
+
+/* 속성 값이 btn-로 시작하는 요소 선택 */
+[class^="btn-"] {
+	color:red;
+}
+
+/* 속성 값이 danger로 끝나는 요소 선택 */
+[class$="danger"] {
+	color: red;
+}
+```
+* password에 큰 따옴표는 붙여도 되고 안붙여도 된다.
+
+## 상속과 우선순위
+### 상속
+* css에서 부모 요소에 속성을 적용하면 후손에게도 속성이 적용될 수도 있다.
+* 주로 글자와 관련된 속성들은 하위 요소들에 상속이 된다.
+* 상속되지 않는 속성도 `position: inherit;`을 상요해 부모에서 자식으로 강제 상속 시킬 수 있다.
+* 다만 자식을 제외한 후손에게는 적용되지 않고, 모든 속성이 강제 상속을 사용할 수 있는 것은 아니다.
+
+### 우선순위
+* 같은 요소가 여러 선언의 대상이 될 경우, 어떤 선언의 속성을 우선 적용할지 결정하는 방법
+1. 명시도 점수가 높은 선언이 우선 (명시도)
+2. 점수가 같은 경우, 가장 마지막에 해석되는 선언이 우선 (선언 순서)
+3. 명시도는 상속 규칙보다 우선
+
+#### 명시도 점수
+1. !important
+	* 모든 선언을 무시하고 가장 우선
+	* 점수 : 무한대 pt
+2. 인라인 선언 방식
+	* 점수 : 1000 pt
+3. 아이디 
+	* 점수 : 100pt
+4. 클래스
+	* 점수 : 10pt
+5. 태그
+	* 점수 : 1pt
+6. 전체
+	* 점수 : 0pt
+7. 상속
+	* 점수 : 계산하지 않음. 0보다 낮다.
+
+* 부정 선택자 `:not()`은 점수를 가지지 않는다.
+
+# 단위
+### px
+* 해상도에 따른 상대 단위
+
+### %
+* 부모 요소에 대한 상대 단위
+
+### em
+* 자기 자신의 폰트 크기에 영향을 받는다.
+* ex ) 15em은 15 * 자기 자신의 폰트 크기
+
+### rem
+* root em이라고 생각할 수 있다.
+* html에 지정된 폰트사이즈에 영향을 받는다.
+* em으로 관리하기 힘든 경우에 사용한다.
+
+### vw, vh
+* vw는 뷰포트의 너비 값, vh는 뷰포트의 높이 값
+* 출력되는 화면의 전체를 뷰포트라고 한다.
+* 백분율로 계산되기 때문에 100을 최대사이즈로 하여 사용하면 된다.
+
+### vmin, vmax
+* 뷰포트의 최소 너비와 최대 너비
+* 가로 사이즈와 세로 사이즈를 비교하여 화면을 조절할 때마다 넓거나 좁은 쪽의 너비를 기준으로 설정하는 단위
