--- a/_posts/2021-06-1-0531-0606.md
+++ b/_posts/2021-06-1-0531-0606.md
@@ -5,6 +5,9 @@ category: TIL
 ---
 ## 0531
 # 역량테스트 준비 7일차
+
+
+
 역량테스트가 점점 눈앞으로 다가오고 있다. 부지런하게 자기소개서도 작성하고 있다.  
 항상 자기소개서를 작성할 때마다 부족한 글솜씨를 어떻게 커버할지 많은 고민이 된다.  
 두괄식으로 자기소개서를 작성하는 법을 익혀야겠다.  
@@ -312,3 +315,216 @@ category: TIL
 3. 1, 2번이 같다면 'HTML' 마지막 코드일수록 위에 쌓인다.
 
 * z-index는 position이 있을 때만 동작한다.
+
+## 0601
+# 역량테스트 준비 8일차
+오늘은 background 속성과 transition, transform 속성 그리고 애니메이션과 관련된 속성들에 대해 학습하였다.
+
+# 배경
+## background
+* 요소의 배경을 설정
+```css
+background: 색상 이미지경로 반복 위치 스크롤특성;
+```
+
+### background-color
+* 색상 : 요소의 배경 색상
+* transparent: 투명
+
+### background-image
+* 요소의 배경에 하나 이상의 이미지를 삽입
+* none : 이미지 없음. 기본값
+* url("경로") : 이미지 경로
+
+```css
+.box {
+	background-image: url("경로");
+	width: 120px;
+	height: 80px;
+}
+```
+* 배경 이미지 삽입 시, 요소 크기가 설정되어야 보일 수 있다.
+* 하나 이상의 배경 이미지를 삽입할 경우 ,로 구분한다. 먼저 작성된 이미지가 더 위에 쌓인다.
+
+### background-repeat
+* 배경 이미지의 반복을 설정
+* repeat : 배경 이미지를 수직, 수평으로 반복. 기본값
+* repeat-x : 배경 이미지를 수평으로 반복
+* repeat-y : 배경 이미지를 수직으로 반복
+* no-repeat : 반복 없음
+
+### background-position
+* 배경 이미지의 위치를 설정
+* % : 왼쪽 상단 모서리는 0% 0%, 오른쪽 하단 모서리는 100% 100%. x축 y축 순
+* 방향 : right, left, bottom, top, center를 조합하여 사용
+* 방향과 단위를 동시에 이용할 때는 x축 y축 순을 지켜서 사용해야 한다.
+
+### background-attachment
+* 요소가 스크롤될 때 배경 이미지의 스크롤 여부 설정
+* scroll : 배경 이미지가 요소를 따라서 같이 스크롤 됨
+* fixed : 배경 이미지가 뷰포트에 고정되어, 요소가 같이 스크롤되지 않음
+* local : 요소 내 스크롤 시 배경이미지가 같이 스크롤 됨
+
+### background-size
+* 배경 이미지의 크기를 지정
+* auto : 배경 이미지가 원래의 크기로 표시됨
+* 단위 : px, em 등 단위로 지정. width만 입력하면 비율에 맞게 지정됨
+* cover : 배경 이미지의 크기 비율을 유지하며, 요소의 더 넓은 너비에 맞춰짐. 이미지가 잘릴 수 있음
+* contain : 배경 이미지의 크기 비율을 유지하며, 요소의 더 짧은 너비에 맞춰짐. 이미지가 잘리지 않음
+
+# 전환 & 변환
+## transition
+* css 속성의 시작과 끝을 지정하여 중간 값을 애니메이션
+* 주로 변환하기 전의 요소에 지정
+* transition-property : 전환 효과를 사용할 속성 이름을 설정. 기본값 all
+* transition-duration : 전환 효과의 지속시간 설정. 기본값 0s
+* transition-timing-function : 타이밍 함수 지정. 기본값 ease
+* transition-delay : 전환 효과의 대기시간 설정. 기본값 0s
+
+### 타이밍 함수
+* ease : 빠르게 - 느리게
+* linear : 일정하게
+* ease-in : 느리게 - 빠르게
+* steps(n) : n번 분할된 애니메이션
+
+## transform
+* 요소의 변환 효과를 지정
+
+### transform 2D 속성
+* translate(x, y) : 이동(X축, Y축). 단위는 일반 단위
+* scale(x, y) : 크기(X축, Y축). 단위는 없음(배수)
+* rotate(degree) : 회전(각도). 단위는 deg
+* skew(x-deg, y-deg) : 기울임(X축, Y축). 단위는 deg
+* position을 이용해서 이동하는 것은 지양하고, transform의 translate함수를 사용하자.
+* 띄워쓰기로 동시에 2개 이상 함수를 사용할 수 있다.
+
+### transform 3D 변환 함수
+* translate3d(x, y, z) : 이동(X축, Y축, Z축). 단위는 일반 단위
+* scale3d(x, y, z) : 크기(X축, Y축, Z축)
+* ratateX(x) : 회전(X축). 단위 deg
+* ratateY(y) : 회전(Y축). 단위 deg
+* ratateZ(z) : 회전(Z축). 단위 deg
+* perspective(n) : 원근법(거리). 단위는 일반 단위
+* perspective() 함수는 transform 속성 중 제일 앞에 있어야지 동작한다.
+
+## 변환 속성
+### transform-origin
+* 요소 변환의 기준점을 설정
+```css
+.box {
+	transform-origin: X축 Y축 Z축
+}
+```
+* 값으로 left, right, top, bottom, center, %, 일반 단위를 넣을 수 있다.
+* 기본 값은 50%이다.
+
+### transform-style
+* 3D 변환 요소의 자식 요소도 3D 변환을 사용할지 설정
+* flat : 자식 요소의 3D 변환을 사용하지 않음. 기본값
+* preserve-3d : 자식 요소의 3D 변환을 사용함
+
+### perspective
+* 하위 요소를 관찰하는 원근 거리를 설정
+* 단위 : px, em 등 단위로 설정
+
+#### perspective 속성과 함수의 차이점
+* perspective 속성은 관찰 대상의 부모 요소에 적용하여 하위 요소들을 관찰하는 원근 거리를 설정하며, 함수는 관찰 대상에 직접 적용하여 그 대상을 관찰하는 원근 거리를 설정한다.
+
+### perspective-origin
+* 원근 거리의 기준점을 설정
+* X축과 Y축 설정. transform-origin과 사용법이 비슷하다.
+
+### backface-visibility
+* 3D 변환으로 회전된 요소의 뒷면 숨김을 설정
+* visible : 뒷면 숨기지 않음. 기본값
+* hidden: 뒷면 숨김
+
+### matrix()
+* 요소의 2차원 변환 효과를 지정
+* scale(), skew(), translate() 그리고 rotate()를 지정
+* 요소에 일반 변환 함수를 사용하더라도 브라우저에 의해 matrix 함수로 계산되어 적용된다.
+* 일반적인 경우는 matrix 함수가 아닌 일반 변환 함수를 사용하면 된다.
+
+# 애니메이션 & 다단
+## animation
+* 요소에 애니메이션을 설정/제어
+```css
+animation: 애니메이션이름 지속시간 [타이밍 함수 대기시간 반복횟수 반복방향 전후상태 재생/정지];
+```
+
+### @keyframes
+* 2개 이상의 애니메이션 중간 상태(프레임)을 지정
+```css
+@keyframes 애니메이션이름 {
+	0% {속성: 값}
+	50% {속성: 값}
+}
+```
+
+### animation-name
+* @keyframes 규칙의 이름을 지정
+* 기본값 none
+
+### animation-duration
+* 애니메이션의 지속 시간 설정
+* 기본값 0s
+
+### animation-timing-function
+* 타이밍 함수 지정
+* 사용법은 transition-timing-function과 같다.
+
+### animation-delay
+* 애니메이션의 대기 시간 설정
+* 음수가 허용. 그 값만큼 애니메이션이 앞서 시작
+* 단축 속성의 경우 delay가 duration보다 앞에 적지만 않으면 된다. 
+
+### animation-iteration-count
+* 애니메이션 반복 횟수를 설정
+* 숫자 : 반복 횟수를 설정
+* infinite : 무한 반복
+
+### animation-direction
+* 애니메이션의 반복 방향을 설정
+* normal : 정방향만 반복
+* reverse : 역방향만 반복
+* alternate : 정방향에서 역방향으로 반복(왕복)
+* alternate-reverse : 역방향에서 정방향으로 반복(왕복)
+
+### animation-fill-mode
+* 애니메이션의 전후 상태를 설정
+* none : 기존 위치 시작 -> 애니메이션 시작 위치 -> 동작 -> 기존 위치에서 끝
+* forwards : 기존 위치 시작 -> 애니메이션 시작 위치 -> 동작 -> 애니메이션 끝 위치에서 끝
+* backwards : 애니메이션 시작 위치 시작 -> 동작 -> 기존 위치에서 끝
+* both : 애니메이션 시작 위치 시작 -> 동작 -> 애니메이션 끝 위치에서 끝
+
+### animation-play-state
+* 애니메이션의 재생과 정지를 설정
+* running : 애니메이션을 동작. 기본값
+* paused : 애니메이션 동작을 정지
+
+## Multi-Columns
+* 일반 블록 레이아웃을 확장하여 여러 텍스트 다단으로 쉽게 정리하여, 가독성 확보
+
+### columns
+* 다단을 정의하는 단축 속성
+* auto : 브라우저가 단의 너비와 개수를 설정
+* column-width : 단의 최적 너비를 설정. 단위로 지정
+* column-count : 단의 개수를 설정
+
+```css
+.text {
+	columns: 100px 2;
+}
+```
+* 각 단이 줄어들 수 있는 최적 너비(최소 너비)를 설정하며, 요소의 너비가 가변하여 하나의 단이 최적 너비보다 줄어들 경우 단의 개수가 조정
+
+### column-gap
+* 단과 단 사이의 간격 설정
+* normal : 브라우저가 단과 단 사이의 간격을 설정(1em). 기본값
+* 단위 : px, em 등 단위로 지정
+
+### column-rule
+* 단과 단 사이의 선을 지정
+* border 처럼 사용하면 된다.
+* 구분선은 단과 단 사이의 간격 중간에 위치한다.
+* 색을 명시하지 않으면 기본 색은 검정색이지만 글자 색상을 지정하면 그 색을 따라간다.
